fix(ratings): fix scroll button behind fixed button

--- a/express/blocks/columns/columns.css
+++ b/express/blocks/columns/columns.css
@@ -595,7 +595,7 @@ main .fixed-button.button-container {
   left: 0;
   width: 100%;
   padding-bottom: 20px;
-  z-index: 2;
+  z-index: 4;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
   transform: translateY(101%);
   transition: transform 1s;
